--- a/src/component/innercard/StudentProfiles.css
+++ b/src/component/innercard/StudentProfiles.css
@@ -3,7 +3,8 @@
     flex-basis: 0;
     flex-wrap: wrap;
     justify-content: center;
-    overflow: hidden;
+    overflow-y: scroll;
+    height: 80vh;
 }
 
 .flex-item {
@@ -13,8 +14,8 @@
     border-radius: 10px;
     background-color: white;
     color: gray;
-    width: 120px;
-    height: 120px;
+    width: 190px;
+    height: 140px;
     font-size: 25px;
     margin: 20px 20px;
     text-align: center;
@@ -32,3 +33,25 @@
     font-size: 14px;
     font-weight: 500;
 }
+
+/* width */
+::-webkit-scrollbar {
+    width: 15px;
+  }
+
+  ::-webkit-scrollbar-button {
+    height: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px white; 
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #00b7ff; 
+    border-radius: 10px;
+  }
+  
