--- a/src/component/Tab.css
+++ b/src/component/Tab.css
@@ -72,6 +72,8 @@
     margin: auto; 
     display: flex; 
     justify-content: center;
+    width: 80px;
+    height: 80px;
 }
 
 .leftArrowIcon {
@@ -87,3 +89,23 @@
     position: relative; 
     top: '20vh';
 }
+
+.bottomIconGroup {
+    position: relative;
+}
+
+
+@media all and (max-width: 1080px) {
+    .img {
+        width: 50px;
+        height: 50px;
+    }
+}
+
+@media all and (max-width: 800px) {
+    .img {
+        width: 35px;
+        height: 35px;  
+    }
+}
+
